--- a/index.html
+++ b/index.html
@@ -7,5 +7,61 @@
   </head>
   <body>
     <h1>251zs03316</h1>
+    
+    <h2>About</h2>
+    <p>
+      簡単な自己紹介やアピール。<br>
+      どんなことができる、したいのか。
+    </p>
+
+    <h3>Profile</h3>
+    <ul>
+      <li>名前 K</li>
+      <li>所在地 東京</li>
+      <li>得意領域</li>
+    </ul>
+
+    <h3>Skills</h3>
+    <table>
+      <tr>
+        <th>OS</th>
+        <td>Windows</td>
+      </tr>
+      <tr>
+        <th>Engine, Frameworks</th>
+        <td>Node.js, Express など</td>
+      </tr>
+      <tr>
+        <th>Tool, MiddleWare</th>
+        <td>Git, PostgreSQL など</td>
+      </tr>
+      <tr>
+        <th>資格・免許</th>
+        <td> </td>
+      </tr>
+    </table>
+
+    <h3>Works</h3>
+    <p>アピールできる活動内容を書きましょう。</p>
+    <ul>
+      <li><a href="https://github.com/">GitHub</a></li>
+      <li><a href="https://qiita.com/">Qiita</a></li>
+      <li><a href="https://zenn.dev/">Zenn</a></li>
+      <li>
+        作った作品
+        <ul>
+          <li><a href="https://example.com/">作品 1</a></li>
+          <li><a href="https://example.com/">作品 2</a></li>
+        </ul>
+      </li>
+    </ul>
+
+    <h3>Contact</h3>
+    <p>連絡先や SNS のアカウントを書きましょう。</p>
+    <ul>
+      <li><a href="mailto:name@example.com">Mail</a></li>
+      <li><a href="https://twitter.com/n_yobikou">X(旧 Twitter)</a></li>
+      <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
+    </ul>
   </body>
 </html>
